add home, projects

--- a/content/blog/2018/08-18-как-улучшить-иностранный-язык.md
+++ b/content/blog/2018/08-18-как-улучшить-иностранный-язык.md
@@ -11,9 +11,7 @@ category: Languages
 #  es: /blog/por-que-espanol-12
 ---
 
-<figure class="aspect-ratio">
-  <iframe src="https://www.youtube.com/embed/eAJ79n37UDc" frameborder="0" allowfullscreen></iframe>
-</figure>
+<w-youtube url="https://www.youtube.com/embed/eAJ79n37UDc"></w-youtube>
 
 ## Мечтай
 
@@ -36,6 +34,7 @@ category: Languages
 Любой язык это не только слова и правила. Это в первую очередь культура и история людей, которые говорят и развивают этот язык.
 
 Каждый раз, когда ты работаешь с иностранным текстом, выполняй следующие действия:
+
 - прочитай
 - прослушай
 - скажи сам
@@ -49,40 +48,53 @@ category: Languages
 ## Список активностей по улучшению языка
 
 ### Словарь
+
 Перевести и выучить наизусть переводы самых популярных слов и предложений, которые вы используете на своем родном языке. Вы можете использовать некоторые приложения, чтобы находить эти слова из истории чата из своих социальных сетей. Изучите идиомы языка и попытайтесь найти соответствующие высказывания с похожим значением.
 
 ### Песни
+
 Прочитайте, переведите, поймите, научите, научите наизусть, пойте.
 
 ### Радио
+
 Слушайте, записывайте слова, исследуйте. Делайте это каждое утро. Вы можете найти подкасты с транскрипцией текста почти по любой теме.
 
 ### Статьи и книги
+
 Прочитайте, отметьте слова, запишите свои идеи, запишите основные моменты, исследуйте слова и историю.
 
 ### Youtube
+
 Найдите интересные темы для вас, посмотрите с популярными youtubers с субтитрами, комментарий.
 
 ### Фильмы, ТВ-шоу, кино
+
 Смотрите оригиналы с субтитрами, исследуйте слова, обратите внимание на них. Попробуйте повторить некоторые предложения.
 
 ### Twitter, Instagram, Facebook
+
 Найдите носителей языка или друзей ваших друзей, которые живут за границей, чтобы связаться с людьми, которые говорят на вашем желаемом языке. Комментарий к своим сообщениям.
 
 ### Друзья
+
 Поговорите с друзьями, которые также изучают этот язык, анализируют свой язык, проводят исследования, исправляют друг друга, обсуждают трудности.
 
 ### Заявить о себе
+
 Запустите свою трансляцию (видео или сообщения). Вы можете начать свой собственный канал YouTube на том языке, который вы узнаете о том, что вы хорошо знаете.
 
 ### Мероприятия
+
 Посетите конференции, семинары, встречи.
 
 ### Публичное выступление
+
 Изучайте публичные выступления (toastmasters). Практикуйте и говорите на каком-то мероприятии.
 
 ### Тандем
+
 Подружитесь с носителями языка, сделайте тандем, чтобы помочь им узнать твой родной язык. Попросите их исправить вас. Попытайтесь подражать, имитируйте их. Используйте свои фразы, тон, поведение.
 
 ### Учитель
+
 Найдите учителя, носителя языка. Последние два вы можете найти на [italki](https://italki.com)
