--- a/content/blog/2018/08-18-как-улучшить-иностранный-язык.md
+++ b/content/blog/2018/08-18-как-улучшить-иностранный-язык.md
@@ -23,7 +23,7 @@ category: Languages
 
 В течение года используй технику декларирования, чтобы установить все свои долгосрочные, среднесрочные и краткосрочные цели (по 2 каждой). Будь сосредоточены на этих целях в течении 2 месяцев. Не дави на себя.
 
-Присоединяйся к любому онлайн-челенджу или языковому марафону. Присоединяйтесь к [TheGame](/the-game), чтобы конкурировать с самим собой и вдохновляться единомышленниками.
+Присоединяйся к любому онлайн-челенджу или языковому марафону.
 
 ## Действуй
 
